--- a/index.html
+++ b/index.html
@@ -1,65 +1,30 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="libraries/p5.js"
-    ></script>
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="libraries/p5.dom.js"
-    ></script>
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="sketch.js"
-    ></script>
-    <script language="javascript" type="text/javascript" src="spot.js"></script>
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="map/mapfactory.js"
-    ></script>
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="map/searchmap.js"
-    ></script>
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="map/bspmap.js"
-    ></script>
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="map/mazemap.js"
-    ></script>
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="astarpathfinder.js"
-    ></script>
-    <style>
-      body {
-        padding: 20px;
-      }
-    </style>
-  </head>
 
-  <body>
-    <h1>A*</h1>
+<head>
+  <meta charset="UTF-8" />
+  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="spot.js"></script>
+  <script language="javascript" type="text/javascript" src="map/mapfactory.js"></script>
+  <script language="javascript" type="text/javascript" src="map/searchmap.js"></script>
+  <script language="javascript" type="text/javascript" src="map/bspmap.js"></script>
+  <script language="javascript" type="text/javascript" src="map/mazemap.js"></script>
+  <script language="javascript" type="text/javascript" src="astarpathfinder.js"></script>
+  <script src="stylesheet/pageStyle.css"></script>
 
-    <p>
-      This is a demonstration of the
-      <a href="https://en.wikipedia.org/wiki/A*_search_algorithm"
-        >A* "search" algorithm</a
-      >
-      for pathfinding on a 2D grid as described in the video tutorials below. It
-      is implemented in JavaScript using
-      <a href="http://p5js.org">p5.js</a>.
-    </p>
-  </body>
+</head>
+
+<body>
+  <h1>A*</h1>
+
+  <p>
+    This is a demonstration of the
+    <a href="https://en.wikipedia.org/wiki/A*_search_algorithm">A* "search" algorithm</a>
+    for pathfinding on a 2D grid as described in the video tutorials below. It
+    is implemented in JavaScript using
+    <a href="http://p5js.org">p5.js</a>.
+  </p>
+</body>
+
 </html>
